# RAG-Simplified

./: .env  .env.sample  .gitignore  LICENSE  RAG.py  RAG_Simplified.html  RAG_Simplified.ipynb  RAG_Simplified.py  RAG_Simplified.rst  RAG_Simplified_Modified.py  README.md  Trial01.py  app.py  input_output_files.txt  pyproject.toml  rag_simplified_st.py
Archive/: RAG_Simplified_rev0.ipynb  RAG_Simplified_rev1.ipynb
notifications/: wiki_out.json  wiki_query.txt
simple_rag/: RAG.py  __init__.py
simplified_rag/: RAG.py
